--- a/myboot/src/main/resources/application.properties
+++ b/myboot/src/main/resources/application.properties
@@ -11,6 +11,8 @@ webip=localhost
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+#这个可以解决数据库字段敏感大小写,但是字段的名称也得自己去指定名字了【【】】
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.devtools.restart.additional-paths=src/main/java
 
