--- a/myboot/src/main/resources/application.properties
+++ b/myboot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource
-spring.datasource.url=jdbc:mysql://172.16.10.43:3306/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.username=credit_manage
-spring.datasource.password=credit_manage
+spring.datasource.url=jdbc:mysql://172.16.10.43:3316/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.username=asset
+spring.datasource.password=asset
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 webname=Myboot
@@ -11,8 +11,9 @@ webip=localhost
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+
 #这个可以解决数据库字段敏感大小写,但是字段的名称也得自己去指定名字了【【】】
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.devtools.restart.additional-paths=src/main/java
 
