--- a/myboot/src/main/resources/application.properties
+++ b/myboot/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 #datasource
-spring.datasource.url=jdbc:mysql://172.16.10.43:3316/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.username=asset
-spring.datasource.password=asset
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://172.16.10.43:3316/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+#spring.datasource.username=asset
+#spring.datasource.password=asset
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+#multi datasource
+spring.datasource.primary.url=jdbc:mysql://172.16.10.43:3316/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.primary.username=asset
+spring.datasource.primary.password=asset
+spring.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.secondary.url=jdbc:mysql://172.16.10.43:3316/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.secondary.username=asset
+spring.datasource.secondary.password=asset
+spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 
 webname=Myboot
 webip=localhost
