--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=asset
 
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-mybatis.type-aliases-package=com.exa.demo.entity
+mybatis.type-aliases-package=com.exm.demo.entity
