--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <slf4j.version>1.7.7</slf4j.version>
     <commons-lang3.version>3.3.2</commons-lang3.version>
     <jackson.version>2.2.3</jackson.version>
+    <shiro.version>1.2.3</shiro.version>
   </properties>
 
   <dependencies>
@@ -258,6 +259,40 @@
       <artifactId>guava</artifactId>
       <version>17.0</version>
     </dependency>
+
+    <!-- security begin -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-core</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-cas</artifactId>
+      <version>${shiro.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>commons-logging</artifactId>
+          <groupId>commons-logging</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-web</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-ehcache</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+    <!-- security end -->
 
     <!--<dependency>-->
       <!--<groupId>junit</groupId>-->
